--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
       "@app/*": ["src/app/*"],
       "@environment": ["environments/environment"]
     },
-    "strict": true,
+
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
@@ -24,7 +24,8 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
-    "lib": ["es2020", "dom"]
+    "lib": ["es2020", "dom"],
+    "skipLibCheck": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
