--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/vela-orange/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/intl-tel-input/build/css/intlTelInput.css",
               "src/styles.scss"
             ],
             "scripts": []
