--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "firebase": "^9.4.0",
+    "google-libphonenumber": "^3.2.26",
+    "intl-tel-input": "^17.0.3",
+    "ngx-bootstrap": "^7.1.2",
+    "ngx-intl-tel-input": "^3.1.3",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.4",
     "rxfire": "^6.0.0",
@@ -32,6 +36,7 @@
     "@angular-devkit/build-angular": "~13.1.2",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
+    "@types/google-libphonenumber": "^7.4.23",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.2",
