--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "@types/google-libphonenumber": "^7.4.23",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.2",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
